fix navbar upon request. adjust chat to look better on mobile

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,11 +1,5 @@
 $purpleColor: #925BF3;
-.chatDivs {
-  // display: flex;
-  // flex-direction: row;
-}
-.chat {
-  margin-left: 100px;
-}
+
 .login {
   width: 100%;
   display: flex;
@@ -29,7 +23,6 @@ $purpleColor: #925BF3;
   border-radius: 25px;
   border: 2px solid #925BF3;
   margin-top: 25px;
-  // padding: 20px;
   width: 40vw;
   height: 90vh;
   background-image: url("../../assets/img/chatBack.gif");
@@ -64,7 +57,8 @@ $purpleColor: #925BF3;
   .admin {
     text-align: center;
   }
-  .sendMessage {
+  .sendMessages {
+    background-color: black;
     border-radius: 10px;
     width: 40vw;
     border: 2px solid #BBF35B;
@@ -81,30 +75,38 @@ $purpleColor: #925BF3;
   }
 }
 
-.sendMessage {
-  background-color: black;
-
-}
-
-@media only screen and (max-width: 900px) {
-  .chat{
-    width: 90vw;
-    height: 80vh;
-    background-position: bottom;
-    .sendMessage{
-      border-radius: 10px;
-      // width: 40vw;
-      border: 2px solid #BBF35B;
-      // position: fixed;
-      margin-left: 90px;
-      text-align: center;
-      color:#BBF35B;
+@media (max-width: 900px) {
+  .chatDivs{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    .chat{
+      width: 95%;
+      height: 85vh;
+      margin-top: 50px;
+      background-position: bottom;
+      .sendMessages {
+        width: 95%;
+        form {
+          display: flex;
+          input {
+            border-radius: 5px;
+          }
+        }
+      }
+    }
+    .login {
+      width: 100px;
+      form{
+        display: flex;
+        margin-left: 10px;
+        input{
+          background-color: black;
+          &:focus{
+            outline-color: limegreen;
+          }
+        }
+      }
     }
   }
-}
-
-@media only screen and (max-width: 900px) {
-.navbar{
-  color: red;
-}
 }
